--- a/Statistics Capstone.ipynb
+++ b/Statistics Capstone.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "73a43bad-4d01-4c52-8abc-6d86e74f7947",
    "metadata": {},
    "outputs": [],
@@ -270,19 +270,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "id": "1431878a-df6a-4515-8826-57d6067b47ba",
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(len(data)):\n",
     "    if (data.loc[i,'country_name'] == 'Russia') and (1922 < data.loc[i,'year'] <= 1991):\n",
-    "        data.loc[i,'country_name'] = 'USSR'"
+    "        data.loc[i,'country_name'] = 'USSR'\n",
+    "    if (data.loc[i,'country_name'] == 'United States of America') and (data.loc[i,'year'] >= 1914):\n",
+    "        data.loc[i,'country_name'] = 'United States'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "id": "81951562-cdec-4c25-b501-ad60134c36e5",
    "metadata": {},
    "outputs": [],
@@ -293,10 +295,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "id": "e008ad9d-95d4-4f5c-a272-6e7dc048aefb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f9ed18f4490>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# visualization \n",
     "\n",
@@ -333,10 +357,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "id": "fcb190a9-3eaa-4141-aa08-e197c84ea266",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f9ef78ae0a0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# visualization \n",
     "\n",
@@ -388,8 +434,8 @@
     "    fig = go.Figure(go.Choropleth(\n",
     "        z=df_year[indicator],  \n",
     "        hoverinfo='location+z',  \n",
-    "        locations=df_year['country_name'],  #country_text_id #country_name\n",
-    "        locationmode='country names',  #ISO-3 #country names\n",
+    "        locations=df_year['country_name'],  #country_text_id #country_name #        locationmode='country names',  #ISO-3 #country names\n",
+    "        featureidkey='properties.NAME',\n",
     "        geojson=geo,\n",
     "        colorbar_title=indicator,  \n",
     "    ))\n",
@@ -406,18 +452,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "id": "bf885edb-bfbc-46cc-be4c-4d196e45a142",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'NAME': 'Luxembourg', 'ABBREVN': 'Luxembourg', 'SUBJECTO': 'Luxembourg', 'BORDERPRECISION': 3, 'PARTOF': 'Luxembourg'}\n",
+      "Luxembourg\n"
+     ]
+    }
+   ],
    "source": [
-    "#geojson = load_geojson(1945)\n",
-    "#geojson\n",
+    "geojson = load_geojson(1945)\n",
+    "geojson\n",
+    "print(geojson[\"features\"][0][\"properties\"])\n",
+    "print(geojson[\"features\"][0][\"properties\"])\n",
     "#df = data\n",
     "#df_year = df[df['year'] == 1945]\n",
     "#locations = df_year['country_name']\n",
     "#locations"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa6f1f6c-20d7-45db-adc2-38582e712719",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
