--- a/Statistics Capstone.ipynb
+++ b/Statistics Capstone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 274,
    "id": "17d10faa-54a6-4523-bae2-b053613fc7d3",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 275,
    "id": "452e21dd-9c8e-42eb-ad91-f2c9c04b4cf6",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 276,
    "id": "135406e7-1d78-4ae1-ba4c-ad2bbae506f8",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 277,
    "id": "c6925d63-63c9-43f9-8b6b-0081351a9974",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 278,
    "id": "581f0556-e7c3-4275-9654-adfe516e11ff",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 279,
    "id": "69abe0fb-bd63-4ee4-8a16-54a2c13c4b46",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 280,
    "id": "f6099e22-7e92-405d-8506-2691254c11f5",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 281,
    "id": "ba077c88-0ad3-4c94-8e37-3eef2d9c240b",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 282,
    "id": "40494763-3d29-4ffe-886c-24c02c0f321d",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 283,
    "id": "b0125c41-ebd0-4f54-bb71-f330ef7afdf4",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 284,
    "id": "0fbbf324-12f6-406b-a792-2324b784234c",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 285,
    "id": "5741a42a-40ef-4f72-a877-47792d8ed1c5",
    "metadata": {},
    "outputs": [],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 286,
    "id": "a533a270-39b6-440e-ac43-bb31726f5519",
    "metadata": {},
    "outputs": [],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 287,
    "id": "ee709a38-4a85-440a-89e1-2b8688f853d7",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 288,
+   "id": "4275e8f5-9d11-4ad3-b2c9-02decd35df7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data.rename(columns={'v2x_civlib':'CivLib', 'v2x_clphy':'Violence', 'v2x_clpol':'PolLib', 'v2x_freexp_altinf':'FreeExpress', 'v2xcl_rol':'LawEqual', 'v2xeg_eqprotec':'EqProtect', 'v2x_corr':'Corrupt_vdem', 'v2x_execorr':'Ecorrupt', 'v2x_pubcorr':'Pubcorrupt', 'v2x_rule':'RuleLaw', 'v2xcl_acjst':'Justice', 'v2xcl_prpty':'Property', 'v2juhcind':'CourtIndep'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
+   "id": "1431878a-df6a-4515-8826-57d6067b47ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(data)):\n",
+    "    if (data.loc[i,'country_name'] == 'Russia'):\n",
+    "        if (data.loc[i,'year'] <= 1917):\n",
+    "            data.loc[i,'country_name'] = 'Russian Empire'\n",
+    "        elif (data.loc[i,'year'] <= 1991):\n",
+    "            data.loc[i,'country_name'] = 'USSR'\n",
+    "    if (data.loc[i,'country_name'] == 'United States of America') and (data.loc[i,'year'] >= 1914):\n",
+    "        data.loc[i,'country_name'] = 'United States'\n",
+    "    if (data.loc[i,'country_name'] == 'United Kingdom') and (data.loc[i,'year'] < 1938):\n",
+    "        data.loc[i,'country_name'] = 'United Kingdom of Great Britain and Ireland'\n",
+    "    if (data.loc[i,'country_name'] == 'Brazil') and (data.loc[i,'year'] < 1914):\n",
+    "        data.loc[i,'country_name'] = 'Kingdom of Brazil'\n",
+    "    if (data.loc[i,'country_name'] == 'Germany') and (data.loc[i,'year'] >= 1914 and data.loc[i,'year'] < 1920):\n",
+    "        data.loc[i,'country_name'] = 'German Empire'\n",
+    "#    if (data.loc[i,'country_name'] == 'East Germany'):\n",
+    "#            data.loc[i,'country_name'] = 'Germany (Soviet)'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
    "id": "73a43bad-4d01-4c52-8abc-6d86e74f7947",
    "metadata": {},
    "outputs": [],
@@ -270,21 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
-   "id": "1431878a-df6a-4515-8826-57d6067b47ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(len(data)):\n",
-    "    if (data.loc[i,'country_name'] == 'Russia') and (1922 < data.loc[i,'year'] <= 1991):\n",
-    "        data.loc[i,'country_name'] = 'USSR'\n",
-    "    if (data.loc[i,'country_name'] == 'United States of America') and (data.loc[i,'year'] >= 1914):\n",
-    "        data.loc[i,'country_name'] = 'United States'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 291,
    "id": "81951562-cdec-4c25-b501-ad60134c36e5",
    "metadata": {},
    "outputs": [],
@@ -295,9 +316,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 306,
    "id": "e008ad9d-95d4-4f5c-a272-6e7dc048aefb",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -314,7 +337,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f9ed18f4490>"
+       "<IPython.lib.display.IFrame at 0x7f9ef7a27e50>"
       ]
      },
      "metadata": {},
@@ -334,8 +357,8 @@
     "    html.P(\"Select a indicator:\"),\n",
     "    dcc.RadioItems(\n",
     "        id='indicator', \n",
-    "        options=[\"v2x_civlib\", \"v2x_clphy\", \"v2x_clpol\", \"v2x_freexp_altinf\", \"v2xcl_rol\", \"v2xeg_eqprotec\", \"v2x_corr\", \"v2x_execorr\", \"v2x_pubcorr\", \"v2x_rule\", \"v2xcl_acjst\", \"v2xcl_prpty\", \"v2juhcind\", \"nonreligpct\", \"Status\"],\n",
-    "        value=\"v2x_corr\",\n",
+    "        options=[\"CivLib\", \"Violence\", \"PolLib\", \"FreeExpress\", \"LawEqual\", \"EqProtect\", \"Corrupt_vdem\", \"Ecorrupt\", \"Pubcorrupt\", \"RuleLaw\", \"Justice\", \"Property\", \"CourtIndep\", \"nonreligpct\", \"Status\"],\n",
+    "        value=\"CivLib\",\n",
     "        inline=True\n",
     "    ),\n",
     "    dcc.Graph(id=\"graph\"),\n",
@@ -357,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 312,
    "id": "fcb190a9-3eaa-4141-aa08-e197c84ea266",
    "metadata": {},
    "outputs": [
@@ -376,7 +399,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f9ef78ae0a0>"
+       "<IPython.lib.display.IFrame at 0x7f9ed28ae0a0>"
       ]
      },
      "metadata": {},
@@ -401,8 +424,8 @@
     "    html.P(\"Select a indicator:\"),\n",
     "    dcc.RadioItems(\n",
     "        id='indicator', \n",
-    "        options=[\"v2x_civlib\", \"v2x_clphy\", \"v2x_clpol\", \"v2x_freexp_altinf\", \"v2xcl_rol\", \"v2xeg_eqprotec\", \"v2x_corr\", \"v2x_execorr\", \"v2x_pubcorr\", \"v2x_rule\", \"v2xcl_acjst\", \"v2xcl_prpty\", \"v2juhcind\", \"nonreligpct\", \"Status\"],\n",
-    "        value=\"v2x_corr\",\n",
+    "        options=[\"CivLib\", \"Violence\", \"PolLib\", \"FreeExpress\", \"LawEqual\", \"EqProtect\", \"Corrupt_vdem\", \"Ecorrupt\", \"Pubcorrupt\", \"RuleLaw\", \"Justice\", \"Property\", \"CourtIndep\", \"nonreligpct\", \"Status\"],\n",
+    "        value=\"CivLib\",\n",
     "        inline=True\n",
     "    ),\n",
     "    dcc.Slider(\n",
@@ -452,19 +475,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "id": "bf885edb-bfbc-46cc-be4c-4d196e45a142",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'NAME': 'Luxembourg', 'ABBREVN': 'Luxembourg', 'SUBJECTO': 'Luxembourg', 'BORDERPRECISION': 3, 'PARTOF': 'Luxembourg'}\n",
-      "Luxembourg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "geojson = load_geojson(1945)\n",
     "geojson\n",
@@ -475,14 +489,6 @@
     "#locations = df_year['country_name']\n",
     "#locations"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa6f1f6c-20d7-45db-adc2-38582e712719",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
