--- a/Statistics Capstone.ipynb
+++ b/Statistics Capstone.ipynb
@@ -327,7 +327,7 @@
    "source": [
     "#read in Lucca csv after he is complete with imputation and WRP\n",
     "\n",
-    "fin_data = pd.read_csv('?.csv', encoding= 'utf-8')"
+    "imp = pd.read_csv('imputed.csv', encoding= 'utf-8')"
    ]
   },
   {
@@ -384,7 +384,7 @@
     "    Output(\"graph\", \"figure\"), \n",
     "    Input(\"indicator\", \"value\"))\n",
     "def display_choropleth(indicator):\n",
-    "    df = fin_data \n",
+    "    df = imp \n",
     "    fig = px.choropleth(\n",
     "        df, color=indicator, hover_name='country_name', locations=\"country_text_id\", animation_frame='year', animation_group ='year',\n",
     "        projection=\"natural earth\")\n",
@@ -469,7 +469,7 @@
     "        while i >= 0 and update_map_years[i] > year:\n",
     "             i -= 1               \n",
     "        geo = load_geojson(update_map_years[i])\n",
-    "    df = fin_data\n",
+    "    df = imp\n",
     "    df_year = df[df['year'] == year]\n",
     "    fig = go.Figure(go.Choropleth(\n",
     "        z=df_year[indicator],  \n",
@@ -514,16 +514,6 @@
     "#df_year = df[df['year'] == 1945]\n",
     "#locations = df_year['country_name']\n",
     "#locations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "832c787b-b723-4fd1-bfd3-0750fd92cc08",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "imp = pd.read_csv('imputed.csv', encoding= 'utf-8')"
    ]
   },
   {
