--- a/Statistics Capstone.ipynb
+++ b/Statistics Capstone.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 1,
    "id": "17d10faa-54a6-4523-bae2-b053613fc7d3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
+     ]
+    }
+   ],
    "source": [
     "# import packages\n",
     "\n",
@@ -25,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 2,
    "id": "452e21dd-9c8e-42eb-ad91-f2c9c04b4cf6",
    "metadata": {},
    "outputs": [
@@ -33,10 +42,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/rd/8m4_zzhs0pn_c_576285lzcm0000gp/T/ipykernel_92792/658557787.py:3: DtypeWarning:\n",
-      "\n",
-      "Columns (364,365,366,399,415,804,836,837,924,1240,1257,1486,3094,3168,3169,3341,3342,3344,3345,3347,3350,3352) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "\n"
+      "/var/folders/rd/8m4_zzhs0pn_c_576285lzcm0000gp/T/ipykernel_39883/658557787.py:3: DtypeWarning: Columns (364,365,366,399,415,804,836,837,924,1240,1257,1486,3094,3168,3169,3341,3342,3344,3345,3347,3350,3352) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  vdem = pd.read_csv('V-Dem-CY-Full+Others-v14.csv', encoding= 'utf-8')\n"
      ]
     }
    ],
@@ -52,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 3,
    "id": "135406e7-1d78-4ae1-ba4c-ad2bbae506f8",
    "metadata": {},
    "outputs": [],
@@ -74,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 4,
    "id": "c6925d63-63c9-43f9-8b6b-0081351a9974",
    "metadata": {},
    "outputs": [],
@@ -89,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 5,
    "id": "581f0556-e7c3-4275-9654-adfe516e11ff",
    "metadata": {},
    "outputs": [],
@@ -137,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 6,
    "id": "69abe0fb-bd63-4ee4-8a16-54a2c13c4b46",
    "metadata": {},
    "outputs": [],
@@ -149,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 7,
    "id": "f6099e22-7e92-405d-8506-2691254c11f5",
    "metadata": {},
    "outputs": [],
@@ -161,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 8,
    "id": "ba077c88-0ad3-4c94-8e37-3eef2d9c240b",
    "metadata": {},
    "outputs": [],
@@ -175,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 9,
    "id": "40494763-3d29-4ffe-886c-24c02c0f321d",
    "metadata": {},
    "outputs": [],
@@ -187,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 10,
    "id": "b0125c41-ebd0-4f54-bb71-f330ef7afdf4",
    "metadata": {},
    "outputs": [],
@@ -205,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 11,
    "id": "0fbbf324-12f6-406b-a792-2324b784234c",
    "metadata": {},
    "outputs": [],
@@ -218,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 12,
    "id": "5741a42a-40ef-4f72-a877-47792d8ed1c5",
    "metadata": {},
    "outputs": [],
@@ -230,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 13,
    "id": "a533a270-39b6-440e-ac43-bb31726f5519",
    "metadata": {},
    "outputs": [],
@@ -245,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 14,
    "id": "ee709a38-4a85-440a-89e1-2b8688f853d7",
    "metadata": {},
    "outputs": [],
@@ -258,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 15,
    "id": "4275e8f5-9d11-4ad3-b2c9-02decd35df7d",
    "metadata": {},
    "outputs": [],
@@ -268,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 16,
    "id": "1431878a-df6a-4515-8826-57d6067b47ba",
    "metadata": {},
    "outputs": [],
@@ -305,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 17,
    "id": "73a43bad-4d01-4c52-8abc-6d86e74f7947",
    "metadata": {},
    "outputs": [],
@@ -320,19 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3437069f-d672-4fc5-876c-358398ce1969",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#read in Lucca csv after he is complete with imputation and WRP\n",
-    "\n",
-    "imp = pd.read_csv('imputed.csv', encoding= 'utf-8')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 26,
    "id": "e008ad9d-95d4-4f5c-a272-6e7dc048aefb",
    "metadata": {
     "scrolled": true
@@ -353,7 +348,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f9ed0f81490>"
+       "<IPython.lib.display.IFrame at 0x7fe74a87ac10>"
       ]
      },
      "metadata": {},
@@ -384,7 +379,7 @@
     "    Output(\"graph\", \"figure\"), \n",
     "    Input(\"indicator\", \"value\"))\n",
     "def display_choropleth(indicator):\n",
-    "    df = imp \n",
+    "    df = data \n",
     "    fig = px.choropleth(\n",
     "        df, color=indicator, hover_name='country_name', locations=\"country_text_id\", animation_frame='year', animation_group ='year',\n",
     "        projection=\"natural earth\")\n",
@@ -396,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 28,
    "id": "fcb190a9-3eaa-4141-aa08-e197c84ea266",
    "metadata": {},
    "outputs": [
@@ -415,7 +410,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f9ee0af43a0>"
+       "<IPython.lib.display.IFrame at 0x7fe75ec1e3a0>"
       ]
      },
      "metadata": {},
@@ -469,7 +464,7 @@
     "        while i >= 0 and update_map_years[i] > year:\n",
     "             i -= 1               \n",
     "        geo = load_geojson(update_map_years[i])\n",
-    "    df = imp\n",
+    "    df = data\n",
     "    df_year = df[df['year'] == year]\n",
     "    fig = go.Figure(go.Choropleth(\n",
     "        z=df_year[indicator],  \n",
@@ -492,16 +487,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 388,
+   "execution_count": 18,
+   "id": "3437069f-d672-4fc5-876c-358398ce1969",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#read in Lucca csv after he is complete with imputation and WRP\n",
+    "\n",
+    "imp = pd.read_csv('imputed.csv', encoding= 'utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "bf885edb-bfbc-46cc-be4c-4d196e45a142",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'NAME': 'Luxembourg', 'ABBREVN': 'Luxembourg', 'SUBJECTO': 'Luxembourg', 'BORDERPRECISION': 3, 'PARTOF': 'Luxembourg'}\n",
-      "{'NAME': 'Puerto Rico', 'ABBREVN': 'Puerto Rico', 'SUBJECTO': 'Puerto Rico', 'BORDERPRECISION': 3, 'PARTOF': 'Puerto Rico'}\n"
+     "ename": "NameError",
+     "evalue": "name 'json' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/rd/8m4_zzhs0pn_c_576285lzcm0000gp/T/ipykernel_39883/1935804096.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgeojson\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_geojson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1945\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mgeojson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgeojson\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"features\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"properties\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgeojson\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"features\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"properties\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#df = data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/rd/8m4_zzhs0pn_c_576285lzcm0000gp/T/ipykernel_39883/1910045594.py\u001b[0m in \u001b[0;36mload_geojson\u001b[0;34m(year)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mload_geojson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myear\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'world_{year}.geojson'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m app.layout = html.Div([\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'json' is not defined"
      ]
     }
    ],
@@ -518,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "9c05ddd0-5a2d-460d-a945-4c0acf1cec74",
    "metadata": {},
    "outputs": [],
@@ -531,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "9bdebe54-aadc-488d-b7d1-5d3d1606b02f",
    "metadata": {},
    "outputs": [],
